# CDE

./: .gitignore  README.md  pyproject.toml
docs/source/: cde.generators.rst  cde.rst  conf.py  index.rst  modules.rst
src/cde/: annotate.py  cli.py  config.py  evaluator.py  io.py  models.py  utils.py
src/cde/generators/: __init__.py  base.py  factory.py  ollama.py  vllm.py
src/datasets/: cli.py  config.py
src/datasets/builders/: __init__.py  base.py  factory.py  wsc.py
