[build-system]
requires = ["setuptools>=80.10.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CDE"
version = "0.1.0"
description = "Continuation-based Disambiguation Evaluator"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Eva", email = "eva.evangelisti03@gmail.com" }]
dependencies = [
    "ollama>=0.6.2",
    "tqdm>=4.67.1",
    "typer>=0.21.1",
    "vllm>=0.23.0; sys_platform != 'darwin'",
]

[project.optional-dependencies]
datasets = [
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
    "it-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/it_core_news_lg-3.8.0/it_core_news_lg-3.8.0-py3-none-any.whl",
    "nltk>=3.9.4",
    "spacy>=3.8.14",
]

dev = ["black>=26.1.0", "isort>=7.0.0"]
docs = ["furo>=2025.12.19", "sphinx>=8.1.3"]

[project.scripts]
cde = "cde.cli:app"
datasets = "datasets.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
